# sws

./: .gitignore  .gitmodules  CMakeLists.txt  build_sws_release.sh  install.md  run_sws.sh  test_config.txt  trim_sws_log.sh
src/: main.c  sws_config.c  sws_config.h  sws_gpio.c  sws_gpio.h  sws_logger.c  sws_logger.h  sws_time.c  sws_time.h  sws_types.h
stubs/: sws_config_stub.c  sws_gpio_stub.c  sws_time_stub.c
